kubernetes/services/jellyseerr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 5055
  selector:
    app: jellyseerr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: default
spec:
  tls:
    - hosts:
        - jellyseerr.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: jellyseerr.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: default
  labels:
    app: jellyseerr
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@daily"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: fallenbagel/jellyseerr:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - name: web
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          hostPath:
            path: /storage/jellyseerr/config
